[gd_scene load_steps=21 format=3 uid="uid://d1tvirhgpnyxd"]

[ext_resource type="Shader" path="res://shaders/main_menu.gdshader" id="1_e2h3x"]
[ext_resource type="Script" path="res://scripts/startmenu.gd" id="1_i8ogi"]
[ext_resource type="Texture2D" uid="uid://c0ea7o40ujwtf" path="res://assets/menu/background.png" id="1_rydor"]
[ext_resource type="Texture2D" uid="uid://ct5qhyx8jbec2" path="res://assets/menu/buttonssheet.png" id="4_g0r1v"]
[ext_resource type="Texture2D" uid="uid://b6mdvd1x5nbej" path="res://assets/menu/selectstart.png" id="5_jxyxw"]
[ext_resource type="Texture2D" uid="uid://b0wsnsspxbmnw" path="res://assets/menu/selectionsheet.png" id="5_u0ob6"]
[ext_resource type="Texture2D" uid="uid://cgwb6hmsk0kug" path="res://assets/menu/logo.png" id="9_2nm3k"]
[ext_resource type="Texture2D" uid="uid://bwy72rrbpfj0t" path="res://assets/menu/mask.png" id="11_2ee1v"]
[ext_resource type="SpriteFrames" uid="uid://ctayxkvsuwtmr" path="res://assets/devil.tres" id="12_y77nq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fixq2"]
shader = ExtResource("1_e2h3x")
shader_parameter/scroll_speed = 0.6
shader_parameter/scroll_y_modifier = 0.24

[sub_resource type="AtlasTexture" id="AtlasTexture_qim0k"]
atlas = ExtResource("4_g0r1v")
region = Rect2(0, 0, 152, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss48h"]
atlas = ExtResource("4_g0r1v")
region = Rect2(152, 0, 152, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm4rd"]
atlas = ExtResource("4_g0r1v")
region = Rect2(304, 0, 152, 86)

[sub_resource type="SpriteFrames" id="SpriteFrames_070se"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qim0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss48h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm4rd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y7grv"]
atlas = ExtResource("5_u0ob6")
region = Rect2(0, 0, 2, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_qescd"]
atlas = ExtResource("5_u0ob6")
region = Rect2(2, 0, 2, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq458"]
atlas = ExtResource("5_u0ob6")
region = Rect2(4, 0, 2, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_i8vqx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7grv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qescd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq458")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_su3r1"]

[sub_resource type="BoxMesh" id="BoxMesh_3onw7"]
size = Vector3(100, 0.5, 100)

[node name="startmenu" type="Node2D"]
script = ExtResource("1_i8ogi")

[node name="background" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_fixq2")
position = Vector2(128, 112)
texture = ExtResource("1_rydor")

[node name="buttons" type="AnimatedSprite2D" parent="."]
position = Vector2(121, 167)
sprite_frames = SubResource("SpriteFrames_070se")

[node name="skinLabel" type="Label" parent="."]
visible = false
offset_left = 112.0
offset_top = 116.0
offset_right = 152.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 32
text = "1"

[node name="scaleLabel" type="Label" parent="."]
visible = false
offset_left = 128.0
offset_top = 147.0
offset_right = 168.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 32
text = "3"

[node name="fullscreenLabel" type="Label" parent="."]
visible = false
offset_left = 203.0
offset_top = 116.0
offset_right = 254.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 32
text = "yes"

[node name="highscoreLabel" type="Label" parent="."]
offset_top = 210.0
offset_right = 102.0
offset_bottom = 233.0
theme_override_font_sizes/font_size = 10
text = "highscore = 0"

[node name="pick" type="AnimatedSprite2D" parent="."]
position = Vector2(32, 173)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_i8vqx")

[node name="tutorialthing" type="Sprite2D" parent="."]
position = Vector2(176, 152)
texture = ExtResource("5_jxyxw")

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(128, 108)
texture = ExtResource("9_2nm3k")

[node name="Mask" type="Sprite2D" parent="."]
visible = false
clip_children = 1
position = Vector2(128, 64)
texture = ExtResource("11_2ee1v")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Mask"]
material = SubResource("CanvasItemMaterial_su3r1")
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="Mask/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(80, 80)
render_target_update_mode = 0

[node name="Camera3D" type="Camera3D" parent="Mask/SubViewportContainer/SubViewport"]
fov = 20.0

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Mask/SubViewportContainer/SubViewport/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, -1)
texture_filter = 0
sprite_frames = ExtResource("12_y77nq")
animation = &"1stand"
autoplay = "1stand"

[node name="AnimatedSprite3D2" type="AnimatedSprite3D" parent="Mask/SubViewportContainer/SubViewport/Camera3D/AnimatedSprite3D"]
transform = Transform3D(1, 0, 0, 0, -6.55671e-08, 1, 0, -1.5, -4.37114e-08, 0, -0.16, -0.24)
modulate = Color(0, 0, 0, 1)
texture_filter = 0
sprite_frames = ExtResource("12_y77nq")
animation = &"6run"
autoplay = "1stand"

[node name="Sprite3D" type="Sprite3D" parent="Mask/SubViewportContainer/SubViewport/Camera3D/AnimatedSprite3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.02, -5.7)
modulate = Color(0.547458, 0.678752, 1.92523e-07, 1)
pixel_size = 0.25
texture = ExtResource("1_rydor")

[node name="Sprite3D2" type="Sprite3D" parent="Mask/SubViewportContainer/SubViewport/Camera3D/AnimatedSprite3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.02, 5.7)
modulate = Color(0.547458, 0.678752, 1.92523e-07, 1)
pixel_size = 0.25
texture = ExtResource("1_rydor")

[node name="Sprite3D3" type="Sprite3D" parent="Mask/SubViewportContainer/SubViewport/Camera3D/AnimatedSprite3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.7, -0.02, 5.7)
modulate = Color(0.547458, 0.678752, 1.92523e-07, 1)
pixel_size = 0.25
texture = ExtResource("1_rydor")

[node name="Sprite3D4" type="Sprite3D" parent="Mask/SubViewportContainer/SubViewport/Camera3D/AnimatedSprite3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.7, -0.02, 5.7)
modulate = Color(0.547458, 0.678752, 1.92523e-07, 1)
pixel_size = 0.25
texture = ExtResource("1_rydor")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Mask/SubViewportContainer/SubViewport/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_3onw7")

[node name="SpotLight3D" type="SpotLight3D" parent="Mask/SubViewportContainer/SubViewport/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.3, 0)
spot_range = 50.0
